--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,7 @@
 /* Nav */
 #main-nav {
   position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +11,7 @@
   height: 100%;
   height: 100vh;
   max-height: 100vh;
-  width: 100%;
+  width: 300px;
   padding: 80px 20px 60px;
   opacity: 0;
   color: #fff;
@@ -19,6 +20,7 @@
   overflow: hidden;
   background: rgb(0,34,60);
   background: linear-gradient(15deg, rgba(0,34,60,1) 0%, rgba(0,90,153,1) 100%);
+  box-shadow: 2px 0px 30px rgba(0,0,0,.3);
 }
 #main-nav.initialized {
   animation-duration: 0.4s;
@@ -67,12 +69,12 @@
 }
 .main-nav ul {
   list-style-type: none;
-  text-align: center;
+  text-align: left;
   margin: auto;
   padding: 0;
 }
 .main-nav ul li {
-  font-size: 6em;
+  font-size: 3em;
   font-family: 'Abril Fatface', sans-serif;
 }
 .main-nav ul li a {
@@ -82,4 +84,15 @@
 }
 .main-nav ul li.active {
   color: rgba(255,255,255,1);
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px) {
+  /* #main-nav {
+    width: 50%;
+  } */
+}
+@media screen and (max-width: 600px) {
+  #main-nav {
+    width: 100%;
+  }
 }
